changed style and solved some layout buggs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,11 +5,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   height: 100vh;
-  background-color: rgb(10, 10, 10);
+  background-color: rgb(242,238,233);
+  height: 100%;
 }
 
 a {
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
@@ -32,20 +33,29 @@ nav{
 }
 
 #main {
+  height: 100%;
+}
+
+.background {
+  background-image: url("../public/background-mobile.png");
+  background-position: bottom; /* Center the image */
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .dayTitle {
  font-size: 50px;
  color: white;
+ background-color: rgb(31, 30, 30);
 }
 
 .exerciseGrid {
   display: grid;
   height: 100%;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 49% 49%;
   grid-template-rows: 1fr 1fr 1fr;
-  gap: 5%;
-  border: 1px solid red;
+  gap: 2%;
+  /* border: 1px solid red; */
   margin: 0px 5%;
 }
 
@@ -63,14 +73,52 @@ nav{
 
 /* exerciseHistory */
 
-table{
-  border: 1px solid black;
-  background-color: aliceblue;
+.historyMain{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-table td {
-  border: 1px solid gray;
+.historyMain .historyTable {
+  /* background-color: aliceblue; */
 }
+
+.historyMain .header{
+  display: flex;
+  background-color: aliceblue;
+
+}
+
+.historyMain .header .headerPart2{
+  display: flex;
+  flex-basis: 60%;
+  justify-content: space-around;
+}
+
+.historyMain .content{
+  display: flex;
+  flex-direction: column;
+}
+
+.historyMain .content .day{
+  background-color: aliceblue;
+  display: flex;
+  margin: 0 0 10px 0;
+  border: 1px solid green;
+}
+
+.historyMain .content .setGroup{
+  display: flex;
+  flex-direction: column;
+}
+
+.historyMain .content .set{
+  display: flex;
+  justify-content: space-around;
+  border: 1px solid red;
+}
+
+/* popUp */
 
 .popup{
   background-color: white;
@@ -82,4 +130,7 @@ table td {
   height: 60%;
 }
 
-
+.inputField{
+  width: 50%;
+  text-align: center;
+}
